<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".DetailUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_username"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/user_avatar"
            app:layout_constraintStart_toStartOf="@+id/user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/user_username"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/user_username"
            app:layout_constraintTop_toBottomOf="@+id/user_username" />

        <TextView
            android:id="@+id/user_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/company"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"

            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/user_company"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_company"
            app:layout_constraintTop_toBottomOf="@+id/user_company" />


        <TextView
            android:id="@+id/txtview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/user_location"
            app:layout_constraintTop_toBottomOf="@id/user_location" />

        <TextView
            android:id="@+id/user_following"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/sum_following"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtview"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtview"
            app:layout_constraintTop_toBottomOf="@+id/txtview" />

        <TextView
            android:id="@+id/txtview3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/txtview"
            app:layout_constraintTop_toTopOf="@+id/txtview" />

        <TextView
            android:id="@+id/user_followers"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/sum_followers"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtview3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtview3"
            app:layout_constraintTop_toBottomOf="@+id/txtview3" />

        <TextView
            android:id="@+id/txtview5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/repository"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/txtview3"
            app:layout_constraintTop_toTopOf="@+id/txtview3" />

        <TextView
            android:id="@+id/user_repository"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/sum_repository"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtview5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtview5"
            app:layout_constraintTop_toBottomOf="@+id/txtview5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/user_followers"
            app:layout_constraintStart_toStartOf="@+id/user_followers"
            app:layout_constraintTop_toBottomOf="@+id/user_followers"
            app:tabTextColor="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            app:tint="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tab_layout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tab_layout"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
